<resources>
    <string name="app_name">Curevive Doctor</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_your_schedule">Your schedule</string>
    <string name="lbl_meal_1">Meal 1</string>
    <string name="lbl_meal_2">Meal 2</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_diet">Diet</string>
    <string name="lbl_recent_search_s">"Recent Search's"</string>
    <string name="lbl_patients2">Patients </string>
    <string name="lbl_male_26_yrs">Male , 26 Yrs</string>
    <string name="lbl_select_chakra">Select Chakra</string>
    <string name="lbl_we">We</string>
    <string name="lbl_bronchitis">Bronchitis</string>
    <string name="lbl_5_255">$ 5,255 </string>
    <string name="lbl_hypertension">Hypertension</string>
    <string name="lbl_set">Set</string>
    <string name="lbl_ex_mbbs">Ex: MBBS</string>
    <string name="lbl_50">50%</string>
    <string name="lbl_7_00_pm_7_45_pm">7:00 pm-7:45 pm</string>
    <string name="lbl_fines">Fines</string>
    <string name="lbl_herbology2">HERBOLOGY</string>
    <string name="msg_extra_tips_re">Extra Tips &amp; Remedies</string>
    <string name="lbl_procedure">Procedure</string>
    <string name="lbl_add_meal">Add meal</string>
    <string name="msg_choose_when_you">"Choose when you'll be available for consultations. This will be considered as your working hours in Curevive.Each consultation will be of 20 minutes. You can add multiple time slots per day. Your tasks and consultations will be scheduled for that time. Remember,missing out on consultations or delay in protocol delivery leads to a penalty."</string>
    <string name="lbl_vijay">Vijay</string>
    <string name="lbl_supine_to_prone">Supine to prone</string>
    <string name="lbl_06_12">06.12</string>
    <string name="lbl_d_r_t">D.R.T</string>
    <string name="msg_please_input_th">Please input the meal for your patients as directed and specify the time for each meal .To include additional meals in the diet, utilize the \u201cadd meal \u201c choice. </string>
    <string name="lbl_tu">Tu</string>
    <string name="msg_b_n_y_s_m_d_nu">B.N.Y.S  M.D nutrition</string>
    <string name="lbl_enter_meal">Enter meal</string>
    <string name="msg_online_consulta">Online
Consultation</string>
    <string name="lbl_20000">20000</string>
    <string name="lbl_2300">2300</string>
    <string name="lbl_accupressure">Accupressure</string>
    <string name="msg_back_bending_as">Back bending asanas</string>
    <string name="lbl_platform_fees">Platform fees</string>
    <string name="lbl_wed2">WED</string>
    <string name="lbl_kiran">Kiran</string>
    <string name="lbl_maya">Maya</string>
    <string name="lbl_30">30%</string>
    <string name="lbl_thu2">THU</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_version_1_2">Version 1.2.</string>
    <string name="lbl_mike_mazowski">Mike Mazowski </string>
    <string name="lbl_th">Th</string>
    <string name="msg_12_00pm_2_00p">12:00pm - 2:00pm</string>
    <string name="lbl_amount_set">AMOUNT SET</string>
    <string name="lbl_20">20</string>
    <string name="msg_packs_applicati">Packs application </string>
    <string name="lbl_4_599_00">\u20b9 4,599.00</string>
    <string name="lbl_23">23</string>
    <string name="lbl_ex_bengaluru">Ex: Bengaluru</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_age">Age*</string>
    <string name="lbl_27">27</string>
    <string name="lbl_25">25</string>
    <string name="msg_choose_from_the">Choose from the options below or customize your own treatment</string>
    <string name="lbl_experience3">Experience  -</string>
    <string name="lbl_26">26</string>
    <string name="lbl_750_00">-750.00</string>
    <string name="lbl_94_104">94



104</string>
    <string name="lbl_sun2">SUN</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_disease_filter">Disease Filter</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="lbl_500">$500</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_4_599">\u20b9 4,599</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_submit_the_form">Submit the form</string>
    <string name="lbl_occupation">Occupation</string>
    <string name="lbl_ppbs_104">PPBS   -104</string>
    <string name="lbl_18_31">18.31</string>
    <string name="msg_i_am_suffering">i am suffering from diebeted from past 8 years .hjsdfhjf fhdkjfh jfadjfhk fjdhakjfh jkdafhkjfh hfadjfha fadhfadl hfdkahfo jfhdajhfa fladkjfhdaj jfjlkjafhadkjl hdajfhkjla

</string>
    <string name="lbl_chairyoga">CHAIRYOGA</string>
    <string name="lbl_hydrotherapy2">HYDROTHERAPY</string>
    <string name="lbl_privacy_policy">Privacy policy</string>
    <string name="msg_fill_treatment">Fill  treatment card</string>
    <string name="lbl_view_file">View File</string>
    <string name="msg_identity_proof">Identity Proof  -</string>
    <string name="lbl_ra">RA</string>
    <string name="lbl_slots">Slots</string>
    <string name="lbl_12_00am">12:00am</string>
    <string name="lbl_78_kg">78 kg</string>
    <string name="lbl_photo">Photo *</string>
    <string name="msg_systolic_dia">Systolic



Diastolic</string>
    <string name="lbl_gandalph">Gandalph</string>
    <string name="lbl_845">845</string>
    <string name="lbl_00">00</string>
    <string name="msg_hand_reflexolog">Hand reflexology</string>
    <string name="lbl_fill_form">Fill Form</string>
    <string name="lbl_view_demo">View Demo &gt;&gt;</string>
    <string name="msg_please_choose_t">"Please choose the fees you'll charge patients for specific conditions. Prices range from Curevive's  commission to the maximum charge decided by Curevive. Any amount above the minimum is your profit. Please adjust accordingly."</string>
    <string name="lbl_11_30_am">11:30 AM</string>
    <string name="lbl_yoga2">YOGA</string>
    <string name="lbl_protocols">Protocols</string>
    <string name="lbl_42_00">+$42.00</string>
    <string name="lbl_stretching">Stretching</string>
    <string name="msg_qualification_p">Qualification Proof*</string>
    <string name="lbl_diastolic">Diastolic</string>
    <string name="lbl_more">More</string>
    <string name="lbl_my_code">My Code</string>
    <string name="msg_custom_diabetes2">Custom diabetes essential oil</string>
    <string name="lbl_protocol">PROTOCOL</string>
    <string name="msg_qualification_d">Qualification Details</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_10000">10000</string>
    <string name="lbl_diet2">DIET</string>
    <string name="lbl_mobile_number2">Mobile Number</string>
    <string name="lbl_your_profit">Your profit</string>
    <string name="lbl_none">none

</string>
    <string name="msg_7_00am_8_00_a">7:00AM - 8:00 AM</string>
    <string name="lbl_tips">TIPS</string>
    <string name="lbl_asana_1">Asana 1</string>
    <string name="msg_duration_7_d">Duration -  7 days</string>
    <string name="lbl_last_name2">Last Name</string>
    <string name="lbl_asana_3">Asana 3</string>
    <string name="lbl_asana_2">Asana 2 </string>
    <string name="msg_enter_weekly_ad">Enter weekly advice </string>
    <string name="lbl_transactions">Transactions</string>
    <string name="lbl2">&#1049812;</string>
    <string name="lbl_bmi">BMI</string>
    <string name="msg_rate_us_on_app">Rate us on app store</string>
    <string name="lbl3">****</string>
    <string name="lbl_first_name">First Name*</string>
    <string name="lbl_lawren">Lawren</string>
    <string name="msg_standing_to_sit">Standing to sitting</string>
    <string name="lbl_2000">-2000</string>
    <string name="lbl_oa">OA</string>
    <string name="msg_registration_su">Registration Successful</string>
    <string name="lbl_off">Off</string>
    <string name="lbl_webinar">Webinar</string>
    <string name="lbl_bengaluru">Bengaluru</string>
    <string name="lbl_acupressure">Acupressure</string>
    <string name="lbl_4560">4560</string>
    <string name="lbl_prone_asana">Prone asana</string>
    <string name="lbl_sat2">SAT</string>
    <string name="lbl_mo">Mo</string>
    <string name="lbl_8800">8800</string>
    <string name="lbl_enter_point">Enter point</string>
    <string name="msg_forgot_password">Forgot Password ? </string>
    <string name="msg_08_00am_10_00">08:00am - 10:00am</string>
    <string name="msg_chakra_meditati">Chakra Meditation</string>
    <string name="lbl_aroma2">Aroma</string>
    <string name="lbl_gender2">Gender  -</string>
    <string name="lbl_allergies">Allergies - </string>
    <string name="lbl_monthly">Monthly</string>
    <string name="msg_medical_conditi">Medical condition -
</string>
    <string name="lbl_email_id">Email ID*</string>
    <string name="msg_pls_take_a_look">Pls take a look at the images.</string>
    <string name="lbl_asthma">Asthma</string>
    <string name="lbl_info">Info</string>
    <string name="lbl_alphange">Alphange</string>
    <string name="lbl_albert_bell">Albert Bell</string>
    <string name="lbl_constipation">Constipation</string>
    <string name="lbl_english_hindi">English, hindi

</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_weekly_insights">Weekly insights</string>
    <string name="lbl_shakti">Shakti</string>
    <string name="lbl_29_july_00_00">29 July 00:00</string>
    <string name="lbl_hyperlipidemia">Hyperlipidemia</string>
    <string name="lbl_raise_a_query">Raise a query</string>
    <string name="lbl_osteoarthritis">Osteoarthritis</string>
    <string name="lbl_standing_asanas">Standing Asanas</string>
    <string name="lbl_hydro">Hydro</string>
    <string name="lbl_4300">4300</string>
    <string name="lbl_fri">Fri</string>
    <string name="lbl_experience2">Experience</string>
    <string name="lbl_language">
Language - </string>
    <string name="lbl_invite_a_friend">Invite a Friend</string>
    <string name="lbl_aroma">AROMA</string>
    <string name="msg_www_curevive_in">www.curevive.in/earn/doctorprogram/danalevi</string>
    <string name="msg_withdrawable_ba">Withdrawable balance</string>
    <string name="lbl_write_here2">Write here..</string>
    <string name="lbl_tue">Tue</string>
    <string name="lbl_16_04">16.04</string>
    <string name="lbl_case_history">Case history</string>
    <string name="lbl_100">$100</string>
    <string name="lbl_104">104</string>
    <string name="lbl_referal">Referal</string>
    <string name="lbl_106">106</string>
    <string name="lbl_march_31_2022">March 31,2022</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_11_30am2">11:30am</string>
    <string name="lbl_chats">Chats</string>
    <string name="lbl_select_time">Select Time</string>
    <string name="lbl_add_account">Add Account</string>
    <string name="lbl_city3">City -</string>
    <string name="lbl_city2">City  -</string>
    <string name="lbl_repeat">REPEAT</string>
    <string name="lbl">*</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_m">M</string>
    <string name="lbl_s">S</string>
    <string name="lbl_t">T</string>
    <string name="lbl_thyroid">Thyroid</string>
    <string name="lbl_250_00">+250.00</string>
    <string name="lbl_a">A</string>
    <string name="lbl_f">F</string>
    <string name="lbl_join">Join</string>
    <string name="lbl_patients">Patients</string>
    <string name="lbl_3_4">+3.4%</string>
    <string name="msg_take_your_clinic">Take Your Clinic Online</string>
    <string name="msg_register_for_curevive">Register For Curevive</string>
    <string name="or">or</string>
</resources>