<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="lists3RowModel" type="com.curevivedoctor.app.modules.workshops.data.model.Lists3RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRows"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtS"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_weight="0.28" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{lists3RowModel.txtS}"
            style="@style/txtPoppinsmedium12_2" tools:text="@string/lbl_s"/>
        <TextView android:ellipsize="end" android:id="@+id/txtM"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_41pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.44" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{lists3RowModel.txtM}"
            style="@style/txtPoppinsmedium12_2" tools:text="@string/lbl_m"/>
        <TextView android:ellipsize="end" android:id="@+id/txtT"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_weight="0.28" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{lists3RowModel.txtT}"
            style="@style/txtPoppinsmedium12_2" tools:text="@string/lbl_t"/>
    </LinearLayout>
</layout>
