<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listpatientsRowModel" type="com.curevivedoctor.app.modules.home.data.model.ListpatientsRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowpatients"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtPatients"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_weight="0.25" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{listpatientsRowModel.txtPatients}"
            style="@style/txtIntersemibold14" tools:text="@string/lbl_patients"/>
        <ImageView android:id="@+id/imageGraph"
            android:layout_height="@dimen/_23pxh"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_width="@dimen/_41pxh"
            android:scaleType="fitXY" android:src="@drawable/img_graph"
            tools:ignore="ContentDescription" tools:src="@drawable/img_graph"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTwenty"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_weight="0.35" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{listpatientsRowModel.txtTwenty}"
            style="@style/txtIntermedium14_1" tools:text="@string/lbl_20"/>
        <TextView android:ellipsize="end" android:id="@+id/txtContainer"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_weight="0.21" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_2pxv"
            android:paddingEnd="@dimen/_5pxh"
            android:paddingStart="@dimen/_4pxh"
            android:paddingTop="@dimen/_2pxv" android:singleLine="true"
            android:text="@{listpatientsRowModel.txtContainer}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_3_4"/>
    </LinearLayout>
</layout>
